--- a/device/sdm845/xiaomi-beryllium-ebbg/PKGBUILD
+++ b/device/sdm845/xiaomi-beryllium-ebbg/PKGBUILD
@@ -1,3 +1,4 @@
+_mode=cross
 pkgname=sdm845-xiaomi-beryllium-ebbg
 pkgver=0.1
 pkgrel=1
@@ -10,7 +11,7 @@ sha256sums=('ce82e7ae8b6e082bdf5499c1e1bd2231dbc7cce818de8831af0187d41cbdc737')
 package() {
   cp "$srcdir"/deviceinfo "$srcdir"/deviceinfo_
   sed -i "s/deviceinfo_dtb_ebbg/deviceinfo_dtb/" "$srcdir"/deviceinfo_
-  cat >> "$srcdir"/deviceinfo_ <<EOF
+  cat >>"$srcdir"/deviceinfo_ <<EOF
 
 deviceinfo_partitions_data="/dev/sda21"
 deviceinfo_partitions_microsd="/dev/mmcblk0"
