--- a/device/sdm845/oneplus-enchilada/PKGBUILD
+++ b/device/sdm845/oneplus-enchilada/PKGBUILD
@@ -1,3 +1,4 @@
+_mode=cross
 pkgname=sdm845-oneplus-enchilada
 pkgver=0.1
 pkgrel=1
@@ -5,14 +6,14 @@ arch=(aarch64)
 license=(MIT)
 depends=(sdm845-oneplus-common)
 source=('machine-info'
-        'https://gitlab.com/postmarketOS/pmaports/-/raw/master/device/community/device-oneplus-enchilada/deviceinfo')
+  'https://gitlab.com/postmarketOS/pmaports/-/raw/master/device/community/device-oneplus-enchilada/deviceinfo')
 sha256sums=('7729d6a89258b470cadd48cfbc704bab7791501c53f45f50737dea6b441a3171'
-            '7c856064d9e33f8ecf831a9ed0619d145841bbe1da09d1322defbc8e4d826535')
+  '7c856064d9e33f8ecf831a9ed0619d145841bbe1da09d1322defbc8e4d826535')
 
 package() {
   install -Dm644 "$srcdir"/machine-info "$pkgdir"/etc/machine-info
   cp "$srcdir"/deviceinfo "$srcdir"/deviceinfo_
-  cat >> "$srcdir"/deviceinfo_ <<EOF
+  cat >>"$srcdir"/deviceinfo_ <<EOF
 
 deviceinfo_partitions_data="/dev/sda17"
 EOF
