--- a/main/glibc-locales/PKGBUILD
+++ b/main/glibc-locales/PKGBUILD
@@ -1,3 +1,4 @@
+_mode=cross
 pkgname=glibc-locales
 pkgver=2.32
 pkgrel=2
@@ -7,16 +8,20 @@ depends=("glibc=$pkgver-$pkgrel")
 install=glibc-locales.install
 source=(60-glibc-locales.hook locale-gen.hook locale-gen locales)
 sha256sums=('614416c7ee15dd6f28ce2553f5950546e116c9ea5389df4485f580457379f1c0'
-            '1e9a564dbbccba0eca7917396d00aef46e6b6cf31972a34bf7e620dc84156e03'
-            '371fbec2b57cb85005eb28df233d0689a71b999127b5c7c40f3fdf978c5909a9'
-            '48e0b4240b88d3f117b91a8098e527fcc847a1d9ca90fc30029059c3caa453d2')
+  '1e9a564dbbccba0eca7917396d00aef46e6b6cf31972a34bf7e620dc84156e03'
+  '371fbec2b57cb85005eb28df233d0689a71b999127b5c7c40f3fdf978c5909a9'
+  '49cf1af7d8af89c8bfbe769fcd783cb993f9a49b60728a930a3b629a327aafc9')
 
 package() {
   install -Dm755 "$srcdir/locale-gen" "$pkgdir/usr/lib/glibc-locale/locale-gen"
   for i in $(cat $srcdir/locales); do
+    if [ ! -d $srcdir/usr/lib/glibc-locale/$i.utf8 ]; then
       echo "preparing $i.utf8"
-      localedef -f UTF-8 -i $i $pkgdir/usr/lib/glibc-locale/$i.utf8
+      mkdir -p $srcdir/usr/lib/glibc-locale
+      localedef -f UTF-8 -i $i $srcdir/usr/lib/glibc-locale/$i.utf8
+    fi
   done
+  cp -r $srcdir/usr $pkgdir
   echo "fixing locales paths"
   mv -v $pkgdir/usr/lib/glibc-locale/aa_ER@saaho.utf8 $pkgdir/usr/lib/glibc-locale/aa_ER.utf8@saaho
   mv -v $pkgdir/usr/lib/glibc-locale/be_BY@latin.utf8 $pkgdir/usr/lib/glibc-locale/be_BY.utf8@latin
