--- a/main/mkbootimg-tools/PKGBUILD
+++ b/main/mkbootimg-tools/PKGBUILD
@@ -1,3 +1,4 @@
+_mode=cross
 pkgname=mkbootimg-tools
 pkgver=r382.cc9c13a
 pkgrel=1
@@ -6,7 +7,8 @@ arch=(any)
 url='https://android.googlesource.com/platform/system/tools/mkbootimg'
 license=(Apache MIT)
 depends=(python python2)
-source=(git+https://android.googlesource.com/platform/system/tools/mkbootimg)
+_commit=cc9c13a21d22f0eeb8b863b843a9ba4c997caaf9
+source=("git+https://android.googlesource.com/platform/system/tools/mkbootimg#commit=$_commit")
 sha1sums=('SKIP')
 
 pkgver() {
