--- a/device/boot/android-common/PKGBUILD
+++ b/device/boot/android-common/PKGBUILD
@@ -1,7 +1,10 @@
 _mode=cross
 pkgname=boot-android-common
 pkgver=0.1
-pkgrel=1
+pkgrel=2
 arch=(aarch64)
 license=(MIT)
-depends=(boot-android-bootimg-updater reboot-mode)
+depends=(
+    boot-android-bootimg-updater
+    reboot-mode
+)
