--- a/main/base-kupfer/PKGBUILD
+++ b/main/base-kupfer/PKGBUILD
@@ -1,65 +1,69 @@
 _mode=cross
 pkgname=base-kupfer
 pkgver=0.1
-pkgrel=1
+pkgrel=2
 arch=(aarch64)
 license=(MIT)
 depends=(
-  alsa-ucm-conf
-  alsa-utils
-  bluez
-  bluez-libs
-  bluez-utils
-  glibc-locales
-  haveged
-  iw
-  net-tools
-  networkmanager
-  openssh
-  reboot-mode
-  sudo
-  usb-tethering
-  wireless-regdb
-  wpa_supplicant
-  xdg-user-dirs
+    alsa-ucm-conf
+    alsa-utils
+    bluez
+    bluez-libs
+    bluez-utils
+    glibc-locales
+    haveged
+    iw
+    net-tools
+    networkmanager
+    openssh
+    reboot-mode
+    sudo
+    usb-tethering
+    wireless-regdb
+    wpa_supplicant
+    xdg-user-dirs
 )
 install=base-kupfer.install
-source=('mkinitcpio.conf'
-  '50-mkinitcpio-overwrite.hook'
-  'mkinitcpio-overwrite.sh'
-  'ignore-power-key.conf'
-  'locale.conf'
-  'rootfsresize-hooks.sh'
-  'rootfsresize-install.sh'
-  'rootfsdetect-hooks.sh'
-  'rootfsdetect-install.sh'
-  'firmwaresearchpath-hooks.sh'
-  'firmwaresearchpath-install.sh'
-  'random-mac.conf')
-sha256sums=('cc7a4873019c1c0b0f796cddb7a3783ebff391b76fc86ea456e938485a0ca592'
-  '2f8f68205ea62a635ad192b3db87523122a1e01d8cc78847cfcaa4f1f72ad90e'
-  'dc6cb3968c81efa54863f531700208d074204a36e6652c026ca4fcb6b879dd2a'
-  '784c1237e8c553fd9717e4caf8b996abb4631348b27e3425bb8e39bd7e617476'
-  '151b67da4450eb4f81143835f2342a4302284a0f336c4e13bb9de69009611c9b'
-  '49b675dd41dcd97fb227dc54029548aba0a87792bf075b73aa95b919f5225362'
-  '2110dd40aba8d9c9b5b408296eb3368303e94158d505440496dbb70a86e18023'
-  '8bc7047d5adeebdcbb0a64b83bf24a39cfdfd9511dd82afa3eca22889204cffa'
-  '8bef324054662f2873924a262a06ad18f7b0f8d4a28a61411965748a99cd3965'
-  '7d8c5477627a04e0706539f83adf710b7e00f859b84a27a6ae05ff85ed17f1e6'
-  'aa39559c187dd3aac392481b5a6d57c34ca08196d00ac32e1f5f9013a93681a1'
-  '06198df3c43c556d0fe8388fafc22527342714e163235cc7792cba18e3a903b2')
+source=(
+    mkinitcpio.conf
+    50-mkinitcpio-overwrite.hook
+    mkinitcpio-overwrite.sh
+    ignore-power-key.conf
+    locale.conf
+    rootfsresize-hooks.sh
+    rootfsresize-install.sh
+    rootfsdetect-hooks.sh
+    rootfsdetect-install.sh
+    firmwaresearchpath-hooks.sh
+    firmwaresearchpath-install.sh
+    random-mac.conf
+)
+sha256sums=(
+    cc7a4873019c1c0b0f796cddb7a3783ebff391b76fc86ea456e938485a0ca592
+    2f8f68205ea62a635ad192b3db87523122a1e01d8cc78847cfcaa4f1f72ad90e
+    dc6cb3968c81efa54863f531700208d074204a36e6652c026ca4fcb6b879dd2a
+    784c1237e8c553fd9717e4caf8b996abb4631348b27e3425bb8e39bd7e617476
+    151b67da4450eb4f81143835f2342a4302284a0f336c4e13bb9de69009611c9b
+    49b675dd41dcd97fb227dc54029548aba0a87792bf075b73aa95b919f5225362
+    2110dd40aba8d9c9b5b408296eb3368303e94158d505440496dbb70a86e18023
+    8bc7047d5adeebdcbb0a64b83bf24a39cfdfd9511dd82afa3eca22889204cffa
+    8bef324054662f2873924a262a06ad18f7b0f8d4a28a61411965748a99cd3965
+    7d8c5477627a04e0706539f83adf710b7e00f859b84a27a6ae05ff85ed17f1e6
+    aa39559c187dd3aac392481b5a6d57c34ca08196d00ac32e1f5f9013a93681a1
+    06198df3c43c556d0fe8388fafc22527342714e163235cc7792cba18e3a903b2
+)
 
 package() {
-  install -Dm644 "$srcdir"/mkinitcpio.conf "$pkgdir"/etc/kupfer/mkinitcpio.conf
-  install -Dm644 "$srcdir"/50-mkinitcpio-overwrite.hook "$pkgdir"/usr/share/libalpm/hooks/50-mkinitcpio-overwrite.hook
-  install -Dm755 "$srcdir"/mkinitcpio-overwrite.sh "$pkgdir"/usr/bin/mkinitcpio-overwrite
-  install -Dm644 "$srcdir"/random-mac.conf "$pkgdir"/etc/NetworkManager/conf.d/random-mac.conf
-  install -Dm644 "$srcdir"/ignore-power-key.conf "$pkgdir"/etc/systemd/logind.conf.d/ignore-power-key.conf
-  install -Dm644 "$srcdir"/locale.conf "$pkgdir"/etc/locale.conf
-  install -Dm755 "$srcdir"/rootfsresize-hooks.sh "$pkgdir"/usr/lib/initcpio/hooks/rootfsresize
-  install -Dm755 "$srcdir"/rootfsresize-install.sh "$pkgdir"/usr/lib/initcpio/install/rootfsresize
-  install -Dm755 "$srcdir"/rootfsdetect-hooks.sh "$pkgdir"/usr/lib/initcpio/hooks/rootfsdetect
-  install -Dm755 "$srcdir"/rootfsdetect-install.sh "$pkgdir"/usr/lib/initcpio/install/rootfsdetect
-  install -Dm755 "$srcdir"/firmwaresearchpath-hooks.sh "$pkgdir"/usr/lib/initcpio/hooks/firmwaresearchpath
-  install -Dm755 "$srcdir"/firmwaresearchpath-install.sh "$pkgdir"/usr/lib/initcpio/install/firmwaresearchpath
+    install -Dm644 "$srcdir"/mkinitcpio.conf "$pkgdir"/etc/kupfer/mkinitcpio.conf
+    install -Dm644 "$srcdir"/50-mkinitcpio-overwrite.hook "$pkgdir"/usr/share/libalpm/hooks/50-mkinitcpio-overwrite.hook
+    install -Dm755 "$srcdir"/mkinitcpio-overwrite.sh "$pkgdir"/usr/bin/mkinitcpio-overwrite
+    install -Dm644 "$srcdir"/random-mac.conf "$pkgdir"/etc/NetworkManager/conf.d/random-mac.conf
+    install -Dm644 "$srcdir"/ignore-power-key.conf "$pkgdir"/etc/systemd/logind.conf.d/ignore-power-key.conf
+    install -Dm644 "$srcdir"/locale.conf "$pkgdir"/etc/locale.conf
+    install -Dm755 "$srcdir"/rootfsresize-hooks.sh "$pkgdir"/usr/lib/initcpio/hooks/rootfsresize
+    install -Dm755 "$srcdir"/rootfsresize-install.sh "$pkgdir"/usr/lib/initcpio/install/rootfsresize
+    install -Dm755 "$srcdir"/rootfsdetect-hooks.sh "$pkgdir"/usr/lib/initcpio/hooks/rootfsdetect
+    install -Dm755 "$srcdir"/rootfsdetect-install.sh "$pkgdir"/usr/lib/initcpio/install/rootfsdetect
+    install -Dm755 "$srcdir"/firmwaresearchpath-hooks.sh "$pkgdir"/usr/lib/initcpio/hooks/firmwaresearchpath
+    install -Dm755 "$srcdir"/firmwaresearchpath-install.sh "$pkgdir"/usr/lib/initcpio/install/firmwaresearchpath
 }
