--- a/main/reboot-mode/PKGBUILD
+++ b/main/reboot-mode/PKGBUILD
@@ -1,13 +1,14 @@
 _mode=cross
 pkgname=reboot-mode
-pkgver=1.0.0
-pkgrel=1
 pkgdesc="Reboot the device to a specific mode"
-url="https://gitlab.com/postmarketOS/reboot-mode"
+pkgver=1.0.0
+pkgrel=2
 arch=(any)
 license=(GPL3)
+url=https://gitlab.com/postmarketOS/reboot-mode
 makedepends=(linux-headers)
 source=("https://gitlab.com/postmarketos/reboot-mode/-/archive/$pkgver/reboot-mode-$pkgver.tar.gz")
+sha256sums=(c4e34f77ef09dd7281700255bffe31bdb28ca1b1e12ccb43d74f350459e987cd)
 
 build() {
 	cd "${srcdir}/reboot-mode-$pkgver"
@@ -19,5 +20,3 @@ package() {
 	install -Dm755 "${srcdir}/reboot-mode-$pkgver"/reboot-mode \
 		"$pkgdir"/usr/bin/reboot-mode
 }
-
-sha512sums=("926fae6f1b78b144f092d291f1d0edf58f2a5ea98d3af7aa812f4f1e1330002feb5a8c4499fe334e6d22bc515467359a5a0651e3995d2217a844f3c1b668ae9b")
