--- a/device/sdm845/linux/PKGBUILD
+++ b/device/sdm845/linux/PKGBUILD
@@ -4,185 +4,197 @@ _kernelname=${pkgbase#linux}
 _desc="Qualcomm SDM845 kernel"
 _srcname=linux
 pkgver=5.14.0
-pkgrel=1
+pkgrel=2
 arch=(aarch64)
-url="https://gitlab.com/sdm845-mainline/sdm845-linux"
-license=('GPL2')
-makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'dtc' 'cpio')
-options=('!strip')
-_commit=d4a63174a3a411a819b7b1d5cf75b5c20b66e2be
-source=("linux::git+https://gitlab.com/sdm845-mainline/linux.git#commit=$_commit"
-  'remove-oneplus-stdout.patch'
-  'extra_config'
-  'linux.preset'
-  '60-linux.hook'
-  '90-linux.hook')
-sha256sums=('SKIP'
-  'b90ebeb2cb9ac8c1638d9faea00137e56f077e127898e79c35aa67ad25ecad89'
-  '81e9de93f3ca7095f3bb32521868c3d71251153674f7be899c39976099d6bd88'
-  '66644820faa950a5fc59181f5aefcbed6d7ed652b29aee69979a2be2a032025d'
-  'ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21'
-  '71df1b18a3885b151a3b9d926a91936da2acc90d5e27f1ad326745779cd3759d')
+license=(GPL2)
+url=https://gitlab.com/sdm845-mainline/sdm845-linux
+makedepends=(
+    xmlto
+    docbook-xsl
+    kmod
+    inetutils
+    bc
+    dtc
+    cpio
+)
+options=(!strip)
+_commit=6188267642ac6099c73d7abc3ac6ac2857fd863f
+source=(
+    "linux::git+https://gitlab.com/sdm845-mainline/linux.git#commit=$_commit"
+    remove-oneplus-stdout.patch
+    extra_config
+    linux.preset
+    60-linux.hook
+    90-linux.hook
+)
+sha256sums=(
+    SKIP
+    b90ebeb2cb9ac8c1638d9faea00137e56f077e127898e79c35aa67ad25ecad89
+    81e9de93f3ca7095f3bb32521868c3d71251153674f7be899c39976099d6bd88
+    66644820faa950a5fc59181f5aefcbed6d7ed652b29aee69979a2be2a032025d
+    ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21
+    71df1b18a3885b151a3b9d926a91936da2acc90d5e27f1ad326745779cd3759d
+)
 
 pkgver() {
-  cd ${_srcname}
-  make kernelversion | cut -d "-" -f 1
+    cd ${_srcname}
+    make kernelversion | cut -d "-" -f 1
 }
 
 prepare() {
-  cd ${_srcname}
+    cd ${_srcname}
 
-  git apply ../remove-oneplus-stdout.patch
+    git apply ../remove-oneplus-stdout.patch
 
-  make defconfig sdm845.config
-  cat ../extra_config >>.config
-  make olddefconfig
+    make defconfig sdm845.config
+    cat ../extra_config >>.config
+    make olddefconfig
 
-  # don't run depmod on 'make install'. We'll do this ourselves in packaging
-  sed -i '2iexit 0' scripts/depmod.sh
+    # don't run depmod on "make install". We'll do this ourselves in packaging
+    sed -i "2iexit 0" scripts/depmod.sh
 }
 
 build() {
-  cd ${_srcname}
-  unset LDFLAGS
-  make ${MAKEFLAGS} Image Image.gz modules
-  make ${MAKEFLAGS} DTC_FLAGS="-@" dtbs
-  cat arch/arm64/boot/Image.gz arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-tianma.dtb >arch/arm64/boot/Image-tianma.gz-dtb
-  cat arch/arm64/boot/Image.gz arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-ebbg.dtb >arch/arm64/boot/Image-ebbg.gz-dtb
+    cd ${_srcname}
+    unset LDFLAGS
+    make ${MAKEFLAGS} Image Image.gz modules
+    make ${MAKEFLAGS} DTC_FLAGS="-@" dtbs
+    cat arch/arm64/boot/Image.gz arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-tianma.dtb >arch/arm64/boot/Image-tianma.gz-dtb
+    cat arch/arm64/boot/Image.gz arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-ebbg.dtb >arch/arm64/boot/Image-ebbg.gz-dtb
 }
 
 _package() {
-  pkgdesc="The Linux Kernel and modules - ${_desc}"
-  depends=('coreutils' 'kmod' 'mkinitcpio')
-  optdepends=('crda: to set the correct wireless channels of your country')
-  backup=("etc/mkinitcpio.d/${pkgbase}.preset")
-  install=${pkgname}.install
+    pkgdesc="The Linux Kernel and modules - ${_desc}"
+    depends=(coreutils kmod mkinitcpio)
+    optdepends=("crda: to set the correct wireless channels of your country")
+    backup=(etc/mkinitcpio.d/${pkgbase}.preset)
+    install=${pkgname}.install
 
-  cd ${_srcname}
+    cd ${_srcname}
 
-  KARCH=arm64
+    KARCH=arm64
 
-  # get kernel version
-  _kernver="$(make kernelrelease)"
-  _basekernel=${_kernver%%-*}
-  _basekernel=${_basekernel%.*}
+    # get kernel version
+    _kernver="$(make kernelrelease)"
+    _basekernel=${_kernver%%-*}
+    _basekernel=${_basekernel%.*}
 
-  mkdir -p "${pkgdir}"/{boot,usr/lib/modules}
-  make INSTALL_MOD_PATH="${pkgdir}/usr" modules_install
-  mkdir -p ${pkgdir}/boot/dtbs/qcom
-  cp arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-tianma.dtb \
-    arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-ebbg.dtb \
-    arch/arm64/boot/dts/qcom/sdm845-oneplus-enchilada.dtb \
-    arch/arm64/boot/dts/qcom/sdm845-oneplus-fajita.dtb \
-    ${pkgdir}/boot/dtbs/qcom
-  cp arch/$KARCH/boot/Image{,.gz} "${pkgdir}/boot"
+    mkdir -p "${pkgdir}"/{boot,usr/lib/modules}
+    make INSTALL_MOD_PATH="${pkgdir}/usr" modules_install
+    mkdir -p ${pkgdir}/boot/dtbs/qcom
+    cp arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-tianma.dtb \
+        arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-ebbg.dtb \
+        arch/arm64/boot/dts/qcom/sdm845-oneplus-enchilada.dtb \
+        arch/arm64/boot/dts/qcom/sdm845-oneplus-fajita.dtb \
+        ${pkgdir}/boot/dtbs/qcom
+    cp arch/$KARCH/boot/Image{,.gz} "${pkgdir}/boot"
 
-  # make room for external modules
-  local _extramodules="extramodules-${_basekernel}${_kernelname}"
-  ln -s "../${_extramodules}" "${pkgdir}/usr/lib/modules/${_kernver}/extramodules"
+    # make room for external modules
+    local _extramodules="extramodules-${_basekernel}${_kernelname}"
+    ln -s "../${_extramodules}" "${pkgdir}/usr/lib/modules/${_kernver}/extramodules"
 
-  # add real version for building modules and running depmod from hook
-  echo "${_kernver}" |
-    install -Dm644 /dev/stdin "${pkgdir}/usr/lib/modules/${_extramodules}/version"
+    # add real version for building modules and running depmod from hook
+    echo "${_kernver}" |
+        install -Dm644 /dev/stdin "${pkgdir}/usr/lib/modules/${_extramodules}/version"
 
-  # remove build and source links
-  rm "${pkgdir}"/usr/lib/modules/${_kernver}/{source,build}
+    # remove build and source links
+    rm "${pkgdir}"/usr/lib/modules/${_kernver}/{source,build}
 
-  # now we call depmod...
-  depmod -b "${pkgdir}/usr" -F System.map "${_kernver}"
+    # now we call depmod...
+    depmod -b "${pkgdir}/usr" -F System.map "${_kernver}"
 
-  # add vmlinux
-  install -Dt "${pkgdir}/usr/lib/modules/${_kernver}/build" -m644 vmlinux
+    # add vmlinux
+    install -Dt "${pkgdir}/usr/lib/modules/${_kernver}/build" -m644 vmlinux
 
-  # sed expression for following substitutions
-  local _subst="
+    # sed expression for following substitutions
+    local _subst="
     s|%PKGBASE%|${pkgbase}|g
     s|%KERNVER%|${_kernver}|g
     s|%EXTRAMODULES%|${_extramodules}|g
   "
 
-  # install mkinitcpio preset file
-  sed "${_subst}" ../linux.preset |
-    install -Dm644 /dev/stdin "${pkgdir}/etc/mkinitcpio.d/${pkgbase}.preset"
+    # install mkinitcpio preset file
+    sed "${_subst}" ../linux.preset |
+        install -Dm644 /dev/stdin "${pkgdir}/etc/mkinitcpio.d/${pkgbase}.preset"
 
-  # install pacman hooks
-  sed "${_subst}" ../60-linux.hook |
-    install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/60-${pkgbase}.hook"
-  sed "${_subst}" ../90-linux.hook |
-    install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/90-${pkgbase}.hook"
+    # install pacman hooks
+    sed "${_subst}" ../60-linux.hook |
+        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/60-${pkgbase}.hook"
+    sed "${_subst}" ../90-linux.hook |
+        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/90-${pkgbase}.hook"
 }
 
 _package-headers() {
-  pkgdesc="Header files and scripts for building modules for linux kernel - ${_desc}"
-  provides=("linux-headers=${pkgver}")
-  conflicts=('linux-headers' 'linux-aarch64-headers')
+    pkgdesc="Header files and scripts for building modules for linux kernel - ${_desc}"
+    provides=("linux-headers=${pkgver}")
+    conflicts=(linux-headers linux-aarch64-headers)
 
-  cd ${_srcname}
-  local _builddir="${pkgdir}/usr/lib/modules/${_kernver}/build"
+    cd ${_srcname}
+    local _builddir="${pkgdir}/usr/lib/modules/${_kernver}/build"
 
-  install -Dt "${_builddir}" -m644 Makefile .config Module.symvers
-  install -Dt "${_builddir}/kernel" -m644 kernel/Makefile
+    install -Dt "${_builddir}" -m644 Makefile .config Module.symvers
+    install -Dt "${_builddir}/kernel" -m644 kernel/Makefile
 
-  mkdir "${_builddir}/.tmp_versions"
+    mkdir "${_builddir}/.tmp_versions"
 
-  cp -t "${_builddir}" -a include scripts
+    cp -t "${_builddir}" -a include scripts
 
-  install -Dt "${_builddir}/arch/${KARCH}" -m644 arch/${KARCH}/Makefile
-  install -Dt "${_builddir}/arch/${KARCH}/kernel" -m644 arch/${KARCH}/kernel/asm-offsets.s #arch/$KARCH/kernel/module.lds
+    install -Dt "${_builddir}/arch/${KARCH}" -m644 arch/${KARCH}/Makefile
+    install -Dt "${_builddir}/arch/${KARCH}/kernel" -m644 arch/${KARCH}/kernel/asm-offsets.s #arch/$KARCH/kernel/module.lds
 
-  cp -t "${_builddir}/arch/${KARCH}" -a arch/${KARCH}/include
-  mkdir -p "${_builddir}/arch/arm"
-  cp -t "${_builddir}/arch/arm" -a arch/arm/include
+    cp -t "${_builddir}/arch/${KARCH}" -a arch/${KARCH}/include
+    mkdir -p "${_builddir}/arch/arm"
+    cp -t "${_builddir}/arch/arm" -a arch/arm/include
 
-  install -Dt "${_builddir}/drivers/md" -m644 drivers/md/*.h
-  install -Dt "${_builddir}/net/mac80211" -m644 net/mac80211/*.h
+    install -Dt "${_builddir}/drivers/md" -m644 drivers/md/*.h
+    install -Dt "${_builddir}/net/mac80211" -m644 net/mac80211/*.h
 
-  # http://bugs.archlinux.org/task/13146
-  install -Dt "${_builddir}/drivers/media/i2c" -m644 drivers/media/i2c/msp3400-driver.h
+    # http://bugs.archlinux.org/task/13146
+    install -Dt "${_builddir}/drivers/media/i2c" -m644 drivers/media/i2c/msp3400-driver.h
 
-  # http://bugs.archlinux.org/task/20402
-  install -Dt "${_builddir}/drivers/media/usb/dvb-usb" -m644 drivers/media/usb/dvb-usb/*.h
-  install -Dt "${_builddir}/drivers/media/dvb-frontends" -m644 drivers/media/dvb-frontends/*.h
-  install -Dt "${_builddir}/drivers/media/tuners" -m644 drivers/media/tuners/*.h
+    # http://bugs.archlinux.org/task/20402
+    install -Dt "${_builddir}/drivers/media/usb/dvb-usb" -m644 drivers/media/usb/dvb-usb/*.h
+    install -Dt "${_builddir}/drivers/media/dvb-frontends" -m644 drivers/media/dvb-frontends/*.h
+    install -Dt "${_builddir}/drivers/media/tuners" -m644 drivers/media/tuners/*.h
 
-  # add xfs and shmem for aufs building
-  mkdir -p "${_builddir}"/{fs/xfs,mm}
+    # add xfs and shmem for aufs building
+    mkdir -p "${_builddir}"/{fs/xfs,mm}
 
-  # copy in Kconfig files
-  find . -name Kconfig\* -exec install -Dm644 {} "${_builddir}/{}" \;
+    # copy in Kconfig files
+    find . -name Kconfig\* -exec install -Dm644 {} "${_builddir}/{}" \;
 
-  # remove unneeded architectures
-  local _arch
-  for _arch in "${_builddir}"/arch/*/; do
-    [[ ${_arch} == */${KARCH}/ || ${_arch} == */arm/ ]] && continue
-    rm -r "${_arch}"
-  done
+    # remove unneeded architectures
+    local _arch
+    for _arch in "${_builddir}"/arch/*/; do
+        [[ ${_arch} == */${KARCH}/ || ${_arch} == */arm/ ]] && continue
+        rm -r "${_arch}"
+    done
 
-  # remove files already in linux-docs package
-  rm -r "${_builddir}/Documentation"
+    # remove files already in linux-docs package
+    rm -r "${_builddir}/Documentation"
 
-  # remove now broken symlinks
-  find -L "${_builddir}" -type l -printf 'Removing %P\n' -delete
+    # remove now broken symlinks
+    find -L "${_builddir}" -type l -printf "Removing %P\n" -delete
 
-  # Fix permissions
-  chmod -R u=rwX,go=rX "${_builddir}"
+    # Fix permissions
+    chmod -R u=rwX,go=rX "${_builddir}"
 
-  # strip scripts directory
-  local _binary _strip
-  while read -rd '' _binary; do
-    case "$(file -bi "${_binary}")" in
-    *application/x-sharedlib*) _strip="${STRIP_SHARED}" ;;    # Libraries (.so)
-    *application/x-archive*) _strip="${STRIP_STATIC}" ;;      # Libraries (.a)
-    *application/x-executable*) _strip="${STRIP_BINARIES}" ;; # Binaries
-    *) continue ;;
-    esac
-    /usr/bin/strip ${_strip} "${_binary}"
-  done < <(find "${_builddir}/scripts" -type f -perm -u+w -print0 2>/dev/null)
+    # strip scripts directory
+    local _binary _strip
+    while read -rd "" _binary; do
+        case "$(file -bi "${_binary}")" in
+        *application/x-sharedlib*) _strip="${STRIP_SHARED}" ;;    # Libraries (.so)
+        *application/x-archive*) _strip="${STRIP_STATIC}" ;;      # Libraries (.a)
+        *application/x-executable*) _strip="${STRIP_BINARIES}" ;; # Binaries
+        *) continue ;;
+        esac
+        /usr/bin/strip ${_strip} "${_binary}"
+    done < <(find "${_builddir}/scripts" -type f -perm -u+w -print0 2>/dev/null)
 }
 
 pkgname=("${pkgbase}" "${pkgbase}-headers")
 for _p in ${pkgname[@]}; do
-  eval "package_${_p}() {
+    eval "package_${_p}() {
     _package${_p#${pkgbase}}
   }"
 done
