--- a/device/sdm845/oneplus-common/PKGBUILD
+++ b/device/sdm845/oneplus-common/PKGBUILD
@@ -1,13 +1,16 @@
 _mode=cross
 pkgname=sdm845-oneplus-common
 pkgver=0.1
-pkgrel=1
+pkgrel=2
 arch=(aarch64)
 license=(MIT)
-depends=(sdm845-common sdm845-oneplus-firmware)
-source=('rootston.ini')
-sha256sums=('804ee857b86926f771df1156cda402412310f4ba849d48e7b2102c8097f74808')
+depends=(
+    sdm845-common
+    sdm845-oneplus-firmware
+)
+source=(rootston.ini)
+sha256sums=(804ee857b86926f771df1156cda402412310f4ba849d48e7b2102c8097f74808)
 
 package() {
-  install -Dm644 "$srcdir"/rootston.ini "$pkgdir"/etc/phosh/rootston.ini
+    install -Dm644 "$srcdir"/rootston.ini "$pkgdir"/etc/phosh/rootston.ini
 }
