--- a/device/sdm845/xiaomi-beryllium-common/PKGBUILD
+++ b/device/sdm845/xiaomi-beryllium-common/PKGBUILD
@@ -1,16 +1,23 @@
 _mode=cross
 pkgname=sdm845-xiaomi-beryllium-common
 pkgver=0.1
-pkgrel=1
+pkgrel=2
 arch=(aarch64)
 license=(MIT)
-depends=(sdm845-common sdm845-xiaomi-beryllium-firmware)
-source=('machine-info'
-  'rootston.ini')
-sha256sums=('7729d6a89258b470cadd48cfbc704bab7791501c53f45f50737dea6b441a3171'
-  '4dd6b19f1520ecde745cd6e5f17cd244d897e3824cdb79f2c5c7b3dea09476e7')
+depends=(
+    sdm845-common
+    sdm845-xiaomi-beryllium-firmware
+)
+source=(
+    machine-info
+    rootston.ini
+)
+sha256sums=(
+    7729d6a89258b470cadd48cfbc704bab7791501c53f45f50737dea6b441a3171
+    4dd6b19f1520ecde745cd6e5f17cd244d897e3824cdb79f2c5c7b3dea09476e7
+)
 
 package() {
-  install -Dm644 "$srcdir"/machine-info "$pkgdir"/etc/machine-info
-  install -Dm644 "$srcdir"/rootston.ini "$pkgdir"/etc/phosh/rootston.ini
+    install -Dm644 "$srcdir"/machine-info "$pkgdir"/etc/machine-info
+    install -Dm644 "$srcdir"/rootston.ini "$pkgdir"/etc/phosh/rootston.ini
 }
