--- a/device/sdm845/xiaomi-beryllium-tianma/PKGBUILD
+++ b/device/sdm845/xiaomi-beryllium-tianma/PKGBUILD
@@ -1,12 +1,12 @@
 _mode=cross
 pkgname=sdm845-xiaomi-beryllium-tianma
 pkgver=0.1
-pkgrel=1
+pkgrel=2
 arch=(aarch64)
 license=(MIT)
 depends=(sdm845-xiaomi-beryllium-common)
-source=('https://gitlab.com/postmarketOS/pmaports/-/raw/master/device/community/device-xiaomi-beryllium/deviceinfo')
-sha256sums=('ce82e7ae8b6e082bdf5499c1e1bd2231dbc7cce818de8831af0187d41cbdc737')
+source=(https://gitlab.com/postmarketOS/pmaports/-/raw/master/device/community/device-xiaomi-beryllium/deviceinfo)
+sha256sums=(ce82e7ae8b6e082bdf5499c1e1bd2231dbc7cce818de8831af0187d41cbdc737)
 
 package() {
   cp "$srcdir"/deviceinfo "$srcdir"/deviceinfo_
