--- a/main/glibc-locales/PKGBUILD
+++ b/main/glibc-locales/PKGBUILD
@@ -1,39 +1,47 @@
 _mode=cross
 pkgname=glibc-locales
 pkgver=2.32
-pkgrel=2
+pkgrel=3
 arch=(any)
-license=('GPL3')
-depends=("glibc=$pkgver-$pkgrel")
+license=(GPL3)
+depends=("glibc=$pkgver")
 install=glibc-locales.install
-source=(60-glibc-locales.hook locale-gen.hook locale-gen locales)
-sha256sums=('614416c7ee15dd6f28ce2553f5950546e116c9ea5389df4485f580457379f1c0'
-  '1e9a564dbbccba0eca7917396d00aef46e6b6cf31972a34bf7e620dc84156e03'
-  '371fbec2b57cb85005eb28df233d0689a71b999127b5c7c40f3fdf978c5909a9'
-  '49cf1af7d8af89c8bfbe769fcd783cb993f9a49b60728a930a3b629a327aafc9')
+source=(
+    60-glibc-locales.hook
+    locale-gen.hook
+    locale-gen
+    locales
+)
+sha256sums=(
+    614416c7ee15dd6f28ce2553f5950546e116c9ea5389df4485f580457379f1c0
+    1e9a564dbbccba0eca7917396d00aef46e6b6cf31972a34bf7e620dc84156e03
+    371fbec2b57cb85005eb28df233d0689a71b999127b5c7c40f3fdf978c5909a9
+    49cf1af7d8af89c8bfbe769fcd783cb993f9a49b60728a930a3b629a327aafc9
+)
 
 package() {
-  install -Dm755 "$srcdir/locale-gen" "$pkgdir/usr/lib/glibc-locale/locale-gen"
-  for i in $(cat $srcdir/locales); do
-    if [ ! -d $srcdir/usr/lib/glibc-locale/$i.utf8 ]; then
-      echo "preparing $i.utf8"
-      mkdir -p $srcdir/usr/lib/glibc-locale
-      localedef -f UTF-8 -i $i $srcdir/usr/lib/glibc-locale/$i.utf8
-    fi
-  done
-  cp -r $srcdir/usr $pkgdir
-  echo "fixing locales paths"
-  mv -v $pkgdir/usr/lib/glibc-locale/aa_ER@saaho.utf8 $pkgdir/usr/lib/glibc-locale/aa_ER.utf8@saaho
-  mv -v $pkgdir/usr/lib/glibc-locale/be_BY@latin.utf8 $pkgdir/usr/lib/glibc-locale/be_BY.utf8@latin
-  mv -v $pkgdir/usr/lib/glibc-locale/ca_ES@valencia.utf8 $pkgdir/usr/lib/glibc-locale/ca_ES.utf8@valencia
-  mv -v $pkgdir/usr/lib/glibc-locale/gez_ER@abegede.utf8 $pkgdir/usr/lib/glibc-locale/gez_ER.utf8@abegede
-  mv -v $pkgdir/usr/lib/glibc-locale/gez_ET@abegede.utf8 $pkgdir/usr/lib/glibc-locale/gez_ET.utf8@abegede
-  mv -v $pkgdir/usr/lib/glibc-locale/ks_IN@devanagari.utf8 $pkgdir/usr/lib/glibc-locale/ks_IN.utf8@devanagari
-  mv -v $pkgdir/usr/lib/glibc-locale/nan_TW@latin.utf8 $pkgdir/usr/lib/glibc-locale/nan_TW.utf8@latin
-  mv -v $pkgdir/usr/lib/glibc-locale/sd_IN@devanagari.utf8 $pkgdir/usr/lib/glibc-locale/sd_IN.utf8@devanagari
-  mv -v $pkgdir/usr/lib/glibc-locale/sr_RS@latin.utf8 $pkgdir/usr/lib/glibc-locale/sr_RS.utf8@latin
-  mv -v $pkgdir/usr/lib/glibc-locale/tt_RU@iqtelif.utf8 $pkgdir/usr/lib/glibc-locale/tt_RU.utf8@iqtelif
-  mv -v $pkgdir/usr/lib/glibc-locale/uz_UZ@cyrillic.utf8 $pkgdir/usr/lib/glibc-locale/uz_UZ.utf8@cyrillic
-  install -Dm644 "$srcdir/60-glibc-locales.hook" "$pkgdir/usr/share/libalpm/hooks/60-glibc-locales.hook"
-  install -Dm644 "$srcdir/locale-gen.hook" "$pkgdir/usr/share/libalpm/hooks/locale-gen.hook"
+    install -Dm755 "$srcdir/locale-gen" "$pkgdir/usr/lib/glibc-locale/locale-gen"
+    for i in $(cat $srcdir/locales); do
+        if [ ! -d $srcdir/$pkgver/$i.utf8 ]; then
+            echo "preparing $i.utf8"
+            mkdir -p $srcdir/$pkgver
+            localedef -f UTF-8 -i $i $srcdir/$pkgver/$i.utf8
+        fi
+    done
+    mkdir -p $pkgdir/usr/lib/glibc-locale/
+    cp -r $srcdir/$pkgver/* $pkgdir/usr/lib/glibc-locale/
+    echo "fixing locales paths"
+    mv -v $pkgdir/usr/lib/glibc-locale/aa_ER@saaho.utf8 $pkgdir/usr/lib/glibc-locale/aa_ER.utf8@saaho
+    mv -v $pkgdir/usr/lib/glibc-locale/be_BY@latin.utf8 $pkgdir/usr/lib/glibc-locale/be_BY.utf8@latin
+    mv -v $pkgdir/usr/lib/glibc-locale/ca_ES@valencia.utf8 $pkgdir/usr/lib/glibc-locale/ca_ES.utf8@valencia
+    mv -v $pkgdir/usr/lib/glibc-locale/gez_ER@abegede.utf8 $pkgdir/usr/lib/glibc-locale/gez_ER.utf8@abegede
+    mv -v $pkgdir/usr/lib/glibc-locale/gez_ET@abegede.utf8 $pkgdir/usr/lib/glibc-locale/gez_ET.utf8@abegede
+    mv -v $pkgdir/usr/lib/glibc-locale/ks_IN@devanagari.utf8 $pkgdir/usr/lib/glibc-locale/ks_IN.utf8@devanagari
+    mv -v $pkgdir/usr/lib/glibc-locale/nan_TW@latin.utf8 $pkgdir/usr/lib/glibc-locale/nan_TW.utf8@latin
+    mv -v $pkgdir/usr/lib/glibc-locale/sd_IN@devanagari.utf8 $pkgdir/usr/lib/glibc-locale/sd_IN.utf8@devanagari
+    mv -v $pkgdir/usr/lib/glibc-locale/sr_RS@latin.utf8 $pkgdir/usr/lib/glibc-locale/sr_RS.utf8@latin
+    mv -v $pkgdir/usr/lib/glibc-locale/tt_RU@iqtelif.utf8 $pkgdir/usr/lib/glibc-locale/tt_RU.utf8@iqtelif
+    mv -v $pkgdir/usr/lib/glibc-locale/uz_UZ@cyrillic.utf8 $pkgdir/usr/lib/glibc-locale/uz_UZ.utf8@cyrillic
+    install -Dm644 "$srcdir/60-glibc-locales.hook" "$pkgdir/usr/share/libalpm/hooks/60-glibc-locales.hook"
+    install -Dm644 "$srcdir/locale-gen.hook" "$pkgdir/usr/share/libalpm/hooks/locale-gen.hook"
 }
