--- a/main/pd-mapper-git/PKGBUILD
+++ b/main/pd-mapper-git/PKGBUILD
@@ -1,19 +1,17 @@
 _mode=cross
-_pkgname="pd-mapper"
+_pkgname=pd-mapper
 pkgname="$_pkgname-git"
 pkgdesc="Qualcomm Protection Domain mapper"
 pkgver=r13.d7fe25f
-pkgrel=1
-arch=("aarch64")
+pkgrel=2
+arch=(aarch64)
+license=(BSD-3-Clause)
 url="https://github.com/andersson/$_pkgname"
-license=("BSD-3-Clause")
-groups=("qcom-icnss-wlan")
-depends=("qrtr")
-makedepends=("git" "make" "gcc")
 provides=("$_pkgname")
+depends=(qrtr-git)
 _commit=d7fe25fa6eff2e62cf264544adee9e8ca830dc78
-source=("git://github.com/andersson/$_pkgname.git#commit=$_commit")
-md5sums=("SKIP")
+source=("git+$url#commit=$_commit")
+sha256sums=(SKIP)
 
 pkgver() {
 	cd "$_pkgname"
