--- a/main/rmtfs-git/PKGBUILD
+++ b/main/rmtfs-git/PKGBUILD
@@ -1,19 +1,26 @@
 _mode=cross
-_pkgname="rmtfs"
+_pkgname=rmtfs
 pkgname="$_pkgname-git"
 pkgdesc="Qualcomm Remote Filesystem Service Implementation"
 pkgver=r56.293ab8b
-pkgrel=1
-arch=("aarch64")
+pkgrel=2
+arch=(aarch64)
+license=(BSD-3-Clause)
 url="https://github.com/andersson/$_pkgname"
-license=("BSD-3-Clause")
-groups=("qcom-icnss-wlan")
-depends=("qrtr" "udev")
-makedepends=("git")
 provides=("$_pkgname")
+depends=(
+	qrtr-git
+	udev
+)
 _commit=293ab8babb27ac0f24247bb101fed9420c629c29
-source=("git://github.com/andersson/$_pkgname.git#commit=$_commit" "udev.rules")
-md5sums=("SKIP" "1e827788992863c3e8562e288f65ee05")
+source=(
+	"git+$url#commit=$_commit"
+	udev.rules
+)
+sha256sums=(
+	SKIP
+	0c2f26d40d9d18e3089c6d836b64231c4f7e0c1ca41686fe7c9d1eb495dc6bbe
+)
 
 pkgver() {
 	cd "$_pkgname"
