--- a/main/tqftpserv-git/PKGBUILD
+++ b/main/tqftpserv-git/PKGBUILD
@@ -1,19 +1,17 @@
 _mode=cross
-_pkgname="tqftpserv"
+_pkgname=tqftpserv
 pkgname="$_pkgname-git"
 pkgdesc="Trivial File Transfer Protocol server over AF_QIPCRTR"
 pkgver=r12.783425b
-pkgrel=1
-arch=("aarch64")
+pkgrel=2
+arch=(aarch64)
+license=(BSD-3-Clause)
 url="https://github.com/andersson/$_pkgname"
-license=("BSD-3-Clause")
-groups=("qcom-icnss-wlan")
-depends=("qrtr")
-makedepends=("git" "make" "gcc")
 provides=("$_pkgname")
+depends=(qrtr-git)
 _commit=783425b550de2a359db6aa3b41577c3fbaae5903
-source=("git://github.com/andersson/$_pkgname.git#commit=$_commit")
-md5sums=("SKIP")
+source=("git+$url#commit=$_commit")
+sha256sums=(SKIP)
 
 pkgver() {
 	cd "$_pkgname"
