Speed up glibc-locales building and make it more generic

--- a/main/glibc-locales/PKGBUILD
+++ b/main/glibc-locales/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=cross
 pkgname=glibc-locales
 pkgver=2.32
-pkgrel=3
+pkgrel=4
 arch=(any)
 license=(GPL3)
 depends=("glibc=$pkgver")
@@ -10,38 +10,26 @@ source=(
     60-glibc-locales.hook
     locale-gen.hook
     locale-gen
-    locales
+    Makefile
 )
 sha256sums=(
     614416c7ee15dd6f28ce2553f5950546e116c9ea5389df4485f580457379f1c0
     1e9a564dbbccba0eca7917396d00aef46e6b6cf31972a34bf7e620dc84156e03
     371fbec2b57cb85005eb28df233d0689a71b999127b5c7c40f3fdf978c5909a9
-    49cf1af7d8af89c8bfbe769fcd783cb993f9a49b60728a930a3b629a327aafc9
+    8c8598374b5b00a4aab1a4939cb2ef30a3a3c5c3ddc35766bfbd6ccb619c58ab
 )
 
 package() {
+    mkdir -p $srcdir/$pkgver
+    cd $srcdir/$pkgver
+    make -f ../Makefile $(ls /usr/share/i18n/locales/* | xargs -n 1 basename | sed 's|$|.utf8/LC_NAME|')
+
     install -Dm755 "$srcdir/locale-gen" "$pkgdir/usr/lib/glibc-locale/locale-gen"
-    for i in $(cat $srcdir/locales); do
-        if [ ! -d $srcdir/$pkgver/$i.utf8 ]; then
-            echo "preparing $i.utf8"
-            mkdir -p $srcdir/$pkgver
-            localedef -f UTF-8 -i $i $srcdir/$pkgver/$i.utf8
-        fi
-    done
     mkdir -p $pkgdir/usr/lib/glibc-locale/
     cp -r $srcdir/$pkgver/* $pkgdir/usr/lib/glibc-locale/
-    echo "fixing locales paths"
-    mv -v $pkgdir/usr/lib/glibc-locale/aa_ER@saaho.utf8 $pkgdir/usr/lib/glibc-locale/aa_ER.utf8@saaho
-    mv -v $pkgdir/usr/lib/glibc-locale/be_BY@latin.utf8 $pkgdir/usr/lib/glibc-locale/be_BY.utf8@latin
-    mv -v $pkgdir/usr/lib/glibc-locale/ca_ES@valencia.utf8 $pkgdir/usr/lib/glibc-locale/ca_ES.utf8@valencia
-    mv -v $pkgdir/usr/lib/glibc-locale/gez_ER@abegede.utf8 $pkgdir/usr/lib/glibc-locale/gez_ER.utf8@abegede
-    mv -v $pkgdir/usr/lib/glibc-locale/gez_ET@abegede.utf8 $pkgdir/usr/lib/glibc-locale/gez_ET.utf8@abegede
-    mv -v $pkgdir/usr/lib/glibc-locale/ks_IN@devanagari.utf8 $pkgdir/usr/lib/glibc-locale/ks_IN.utf8@devanagari
-    mv -v $pkgdir/usr/lib/glibc-locale/nan_TW@latin.utf8 $pkgdir/usr/lib/glibc-locale/nan_TW.utf8@latin
-    mv -v $pkgdir/usr/lib/glibc-locale/sd_IN@devanagari.utf8 $pkgdir/usr/lib/glibc-locale/sd_IN.utf8@devanagari
-    mv -v $pkgdir/usr/lib/glibc-locale/sr_RS@latin.utf8 $pkgdir/usr/lib/glibc-locale/sr_RS.utf8@latin
-    mv -v $pkgdir/usr/lib/glibc-locale/tt_RU@iqtelif.utf8 $pkgdir/usr/lib/glibc-locale/tt_RU.utf8@iqtelif
-    mv -v $pkgdir/usr/lib/glibc-locale/uz_UZ@cyrillic.utf8 $pkgdir/usr/lib/glibc-locale/uz_UZ.utf8@cyrillic
+    for file in $pkgdir/usr/lib/glibc-locale/*@*.utf8; do
+        mv "$file" "$(echo "$file" | cut -d "@" -f 1).utf8@$(echo "$file" | cut -d "@" -f 2 | cut -d "." -f 1)"
+    done
     install -Dm644 "$srcdir/60-glibc-locales.hook" "$pkgdir/usr/share/libalpm/hooks/60-glibc-locales.hook"
     install -Dm644 "$srcdir/locale-gen.hook" "$pkgdir/usr/share/libalpm/hooks/locale-gen.hook"
 }
