--- a/main/reboot-mode/PKGBUILD
+++ b/main/reboot-mode/PKGBUILD
@@ -2,7 +2,7 @@ _mode=cross
 pkgname=reboot-mode
 pkgdesc="Reboot the device to a specific mode"
 pkgver=1.0.0
-pkgrel=2
+pkgrel=3
 arch=(any)
 license=(GPL3)
 url=https://gitlab.com/postmarketOS/reboot-mode
@@ -12,6 +12,7 @@ sha256sums=(c4e34f77ef09dd7281700255bffe31bdb28ca1b1e12ccb43d74f350459e987cd)
 
 build() {
 	cd "${srcdir}/reboot-mode-$pkgver"
+	export CFLAGS="$CFLAGS -static"
 	${CC:-gcc} $CFLAGS reboot-mode.c -o reboot-mode.o -c
 	${CC:-gcc} $CFLAGS reboot-mode.o -o reboot-mode
 }
