--- a/device/sdm845/oneplus-common/PKGBUILD
+++ b/device/sdm845/oneplus-common/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=cross
 pkgname=sdm845-oneplus-common
 pkgver=0.2
-pkgrel=1
+pkgrel=2
 arch=(aarch64)
 license=(MIT)
 depends=(
@@ -9,16 +9,16 @@ depends=(
     sdm845-oneplus-firmware
 )
 source=(
-    oneplus-common-firmware-files
+    oneplus-common.conf
     rootston.ini
 )
 sha256sums=(
-    382caf18ede68569c0e9e4fabb6170580f02a813479c228ff9d68afee8f0b370
+    57db7e1cbe2b5d4edd2c57298654bbcaba4e2014c5cbc745295394c3fe366c19
     804ee857b86926f771df1156cda402412310f4ba849d48e7b2102c8097f74808
 )
 
 package() {
-    install -Dm644 "$srcdir"/oneplus-common-firmware-files "$pkgdir"/etc/kupfer/firmware-files/oneplus-common
+    install -Dm644 "$srcdir"/oneplus-common.conf "$pkgdir"/etc/kupfer/mkinitcpio.conf.d/oneplus-common.conf
 
     install -Dm644 "$srcdir"/rootston.ini "$pkgdir"/etc/phosh/rootston.ini
 }
