--- a/main/base-kupfer/mkinitcpio.conf
+++ b/main/base-kupfer/mkinitcpio.conf
@@ -1,4 +1,4 @@
 MODULES=()
 BINARIES=()
-FILES=(/lib/firmware/regulatory.db /lib/firmware/regulatory.db.p7s PLACEHOLDER)
+FILES=(/lib/firmware/regulatory.db /lib/firmware/regulatory.db.p7s)
 HOOKS=(base firmwaresearchpath udev autodetect modconf block rootfsdetect filesystems keyboard rootfsresize fsck)
