--- a/boot/lk2nd-git/PKGBUILD
+++ b/boot/lk2nd-git/PKGBUILD
@@ -13,6 +13,7 @@ license=(MIT)
 url=https://github.com/msm8916-mainline/lk2nd
 provides=(boot-lk2nd)
 makedepends=(
+    python
     dtc
     arm-none-eabi-gcc
 )
