--- a/boot/lk2nd-git/PKGBUILD
+++ b/boot/lk2nd-git/PKGBUILD
@@ -7,6 +7,7 @@ pkgname=(
 )
 pkgver=r5705.e9fe6f89
 pkgrel=2
+_arches=specific
 arch=(aarch64)
 license=(MIT)
 url=https://github.com/msm8916-mainline/lk2nd
