--- a/boot/qhypstub-git/PKGBUILD
+++ b/boot/qhypstub-git/PKGBUILD
@@ -2,6 +2,7 @@ _mode=cross
 pkgname=boot-qhypstub-git
 pkgver=r23.4f11478
 pkgrel=2
+_arches=specific
 arch=(aarch64)
 license=(GPL2)
 url=https://github.com/msm8916-mainline/qhypstub
