--- a/device/sdm845-oneplus-enchilada/PKGBUILD
+++ b/device/sdm845-oneplus-enchilada/PKGBUILD
@@ -2,6 +2,7 @@ _mode=cross
 pkgname=device-sdm845-oneplus-enchilada
 pkgver=0.1
 pkgrel=3
+_arches=specific
 arch=(aarch64)
 license=(MIT)
 depends=(device-sdm845-oneplus-common)
