--- a/device/sdm845-xiaomi-beryllium-ebbg/PKGBUILD
+++ b/device/sdm845-xiaomi-beryllium-ebbg/PKGBUILD
@@ -2,6 +2,7 @@ _mode=cross
 pkgname=device-sdm845-xiaomi-beryllium-ebbg
 pkgver=0.1
 pkgrel=3
+_arches=specific
 arch=(aarch64)
 license=(MIT)
 depends=(device-sdm845-xiaomi-beryllium-common)
