--- a/firmware/sdm845-oneplus-firmware/PKGBUILD
+++ b/firmware/sdm845-oneplus-firmware/PKGBUILD
@@ -2,6 +2,7 @@ _mode=cross
 pkgname=firmware-sdm845-oneplus
 pkgver=0.1
 pkgrel=4
+_arches=specific
 arch=(aarch64)
 license=(custom:Proprietary)
 makedepends=(
