--- a/linux/msm916/PKGBUILD
+++ b/linux/msm916/PKGBUILD
@@ -5,6 +5,7 @@ _desc="Qualcomm MSM8916 kernel"
 _srcname=linux
 pkgver=5.14.0
 pkgrel=1
+_arches=specific
 arch=(aarch64)
 license=(GPL2)
 url=https://github.com/msm8916-mainline/linux
