--- a/linux/sdm845/PKGBUILD
+++ b/linux/sdm845/PKGBUILD
@@ -5,6 +5,7 @@ _desc="Qualcomm SDM845 kernel"
 _srcname=linux
 pkgver=5.14.0
 pkgrel=5
+_arches=specific
 arch=(aarch64)
 license=(GPL2)
 url=https://gitlab.com/sdm845-mainline/sdm845-linux
