--- a/main/arm-none-eabi-gcc/PKGBUILD
+++ b/main/arm-none-eabi-gcc/PKGBUILD
@@ -3,6 +3,7 @@ pkgname=arm-none-eabi-gcc-stub
 pkgdesc="This is only a stub package to satisfy dependencies"
 pkgver=0.1
 pkgrel=1
+_arches=specific
 arch=(any)
 license=(Unlicense)
 provides=(arm-none-eabi-gcc)
