--- a/main/reboot-mode/PKGBUILD
+++ b/main/reboot-mode/PKGBUILD
@@ -3,7 +3,11 @@ pkgname=reboot-mode
 pkgdesc="Reboot the device to a specific mode"
 pkgver=1.0.0
 pkgrel=3
-arch=(any)
+_arches=all
+arch=(
+    aarch64
+    x86_64
+)
 license=(GPL3)
 url=https://gitlab.com/postmarketOS/reboot-mode
 makedepends=(linux-headers)
@@ -11,13 +15,13 @@ source=("https://gitlab.com/postmarketos/reboot-mode/-/archive/$pkgver/reboot-mo
 sha256sums=(c4e34f77ef09dd7281700255bffe31bdb28ca1b1e12ccb43d74f350459e987cd)
 
 build() {
-	cd "${srcdir}/reboot-mode-$pkgver"
-	export CFLAGS="$CFLAGS -static"
-	${CC:-gcc} $CFLAGS reboot-mode.c -o reboot-mode.o -c
-	${CC:-gcc} $CFLAGS reboot-mode.o -o reboot-mode
+    cd "${srcdir}/reboot-mode-$pkgver"
+    export CFLAGS="$CFLAGS -static"
+    ${CC:-gcc} $CFLAGS reboot-mode.c -o reboot-mode.o -c
+    ${CC:-gcc} $CFLAGS reboot-mode.o -o reboot-mode
 }
 
 package() {
-	install -Dm755 "${srcdir}/reboot-mode-$pkgver"/reboot-mode \
-		"$pkgdir"/usr/bin/reboot-mode
+    install -Dm755 "${srcdir}/reboot-mode-$pkgver"/reboot-mode \
+        "$pkgdir"/usr/bin/reboot-mode
 }
