--- a/cross/crossdirect/PKGBUILD
+++ b/cross/crossdirect/PKGBUILD
@@ -16,7 +16,7 @@ _mode=host
 pkgname=crossdirect
 pkgdesc="Wrappers to launch native cross compilers in foreign chroots"
 pkgver=3
-pkgrel=4
+pkgrel=7
 _arches=all
 arch=(
     x86_64
@@ -28,10 +28,14 @@ depends=(ccache)
 source=(
     crossdirect.c
     arch_to_hostspec
+    generate_rust_wrapper.sh
+    rust-qemu-linker.sh
 )
 sha256sums=(
     31e6697c4d720f3c52d88c28ac8d0596e9b8cdd27b1552b829017f9c78e0aefc
     44e06724655bdf38cc12ee3a551c6619b54487f5ee7e666ac2bd47e14181d90f
+    1709bb11d7e23f861638979906f3e162b45ad974473364b6ae09e4a570d00fb7
+    ba90e8375efa48b1af3bb360ae1cdfa72c3fe745cf9b61a7940b2193f410d9fd
 )
 
 build() {
@@ -51,6 +55,9 @@ build() {
             -Werror \
             -DHOSTSPEC="\"$_hostspec\"" \
             crossdirect.c
+
+        # rustc
+        ./generate_rust_wrapper.sh "$_hostspec" >rustc-"$_arch"
     done
 }
 
@@ -58,6 +65,10 @@ package() {
     # Architectures and binaries
     _archs="x86_64 armhf armv7 aarch64"
     _bins="c++ cc cpp g++ gcc clang clang++"
+
+    # Rust: qemu-linker
+    install -Dm755 "$srcdir/rust-qemu-linker.sh" \
+        "$pkgdir/usr/lib/crossdirect/rust-qemu-linker"
 
     # Iterate over architectures
     for _arch in $_archs; do
@@ -90,5 +101,8 @@ package() {
             ln -s ../../../bin/ccache "$_ccachedir/$_hostspec-$_bin"
         done
         ln -s ../../../bin/ccache "$_ccachedir/gcc4-${_hostspec}-gcc"
+
+        # rustc
+        install -Dm755 "$srcdir/rustc-$_arch" "$_bindir/rustc"
     done
 }
