--- a/boot/qhypstub-git/PKGBUILD
+++ b/boot/qhypstub-git/PKGBUILD
@@ -7,7 +7,10 @@ arch=(aarch64)
 license=(GPL2)
 url=https://github.com/msm8916-mainline/qhypstub
 provides=(boot-qhypstub)
-makedepends=(python python-cryptography)
+makedepends=(
+    python
+    python-cryptography
+)
 _commit=4f11478a4b24322beddb2bfe9fbceeceac0446e3
 _qtestsign_commit=073f0e2f0e445900e6f4e6f14b9caea05d4d62fb
 source=(
