Properly disable CI

--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -1,9 +1,9 @@
 variables:
   GIT_CLONE_PATH: /builds
 
-#stages:
-#  - Check
-#  - Build
+stages:
+  - Check
+  - Build
 
 check_formatting:
   stage: Check
