--- a/linux/sdm845/PKGBUILD
+++ b/linux/sdm845/PKGBUILD
@@ -58,7 +58,9 @@ prepare() {
 build() {
     cd ${_srcname}
     unset LDFLAGS
+    # shellcheck disable=SC2086
     make ${MAKEFLAGS} Image.gz modules
+    # shellcheck disable=SC2086
     make ${MAKEFLAGS} DTC_FLAGS="-@" dtbs
 }
 
@@ -80,12 +82,12 @@ _package() {
 
     mkdir -p "${pkgdir}"/{boot,usr/lib/modules}
     make INSTALL_MOD_PATH="${pkgdir}/usr" modules_install
-    mkdir -p ${pkgdir}/boot/dtbs/qcom
+    mkdir -p "${pkgdir}/boot/dtbs/qcom"
     cp arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-tianma.dtb \
         arch/arm64/boot/dts/qcom/sdm845-xiaomi-beryllium-ebbg.dtb \
         arch/arm64/boot/dts/qcom/sdm845-oneplus-enchilada.dtb \
         arch/arm64/boot/dts/qcom/sdm845-oneplus-fajita.dtb \
-        ${pkgdir}/boot/dtbs/qcom
+        "${pkgdir}/boot/dtbs/qcom"
     cp arch/$KARCH/boot/Image.gz "${pkgdir}/boot"
 
     # make room for external modules
@@ -97,7 +99,7 @@ _package() {
         install -Dm644 /dev/stdin "${pkgdir}/usr/lib/modules/${_extramodules}/version"
 
     # remove build and source links
-    rm "${pkgdir}"/usr/lib/modules/${_kernver}/{source,build}
+    rm "${pkgdir}/usr/lib/modules/${_kernver}/"{source,build}
 
     # now we call depmod...
     depmod -b "${pkgdir}/usr" -F System.map "${_kernver}"
@@ -184,12 +186,12 @@ _package-headers() {
         *application/x-executable*) _strip="${STRIP_BINARIES}" ;; # Binaries
         *) continue ;;
         esac
-        /usr/bin/strip ${_strip} "${_binary}"
+        /usr/bin/strip "${_strip}" "${_binary}"
     done < <(find "${_builddir}/scripts" -type f -perm -u+w -print0 2>/dev/null)
 }
 
 pkgname=("${pkgbase}" "${pkgbase}-headers")
-for _p in ${pkgname[@]}; do
+for _p in "${pkgname[@]}"; do
     eval "package_${_p}() {
     _package${_p#${pkgbase}}
   }"
