--- a/main/glibc-locales/PKGBUILD
+++ b/main/glibc-locales/PKGBUILD
@@ -21,14 +21,15 @@ sha256sums=(
 )
 
 package() {
-    mkdir -p $srcdir/$pkgver
-    cd $srcdir/$pkgver
+    mkdir -p "$srcdir/$pkgver"
+    cd "$srcdir/$pkgver"
+    # shellcheck disable=SC2011,SC2046
     make -f ../Makefile $(ls /usr/share/i18n/locales/* | xargs -n 1 basename | sed 's|$|.utf8/LC_NAME|')
 
     install -Dm755 "$srcdir/locale-gen" "$pkgdir/usr/lib/glibc-locale/locale-gen"
-    mkdir -p $pkgdir/usr/lib/glibc-locale/
-    cp -r $srcdir/$pkgver/* $pkgdir/usr/lib/glibc-locale/
-    for file in $pkgdir/usr/lib/glibc-locale/*@*.utf8; do
+    mkdir -p "$pkgdir/usr/lib/glibc-locale/"
+    cp -r "$srcdir/$pkgver/"* "$pkgdir/usr/lib/glibc-locale/"
+    for file in "$pkgdir/usr/lib/glibc-locale/"*@*.utf8; do
         mv "$file" "$(echo "$file" | cut -d "@" -f 1).utf8@$(echo "$file" | cut -d "@" -f 2 | cut -d "." -f 1)"
     done
     install -Dm644 "$srcdir/60-glibc-locales.hook" "$pkgdir/usr/share/libalpm/hooks/60-glibc-locales.hook"
