Fix compile mode for pd-mapper-git, qrtr-git, rmtfs-git, tqftpserv-git

--- a/device/tqftpserv-git/PKGBUILD
+++ b/device/tqftpserv-git/PKGBUILD
@@ -1,4 +1,4 @@
-_mode=cross
+_mode=host
 _pkgname=tqftpserv
 pkgname="$_pkgname-git"
 pkgdesc="Trivial File Transfer Protocol server over AF_QIPCRTR"
